Fixed app from spilling over onto the next DOM element.

--- a/js/intermine/apps-c/pathways-displayer/0.0.1/pathway-displayer.css
+++ b/js/intermine/apps-c/pathways-displayer/0.0.1/pathway-displayer.css
@@ -13,7 +13,7 @@ body {
 
 #pathwaysappcontainer {
   display: block;
-  height: 250px;
+  height: 300px;
 }
 
 #pathwaysappcontainer .pwayMain {
